src/tests/snapshots/nyx__tests__window_opening__check_target_size@dwF1000-dhF500-wfsAU.snap
---
source: src/tests/window_opening.rs
description: "want fullscreen: AU\nconfig:\nwindow-rule {\n    default-column-width { fixed 1000; }\n    default-window-height { fixed 500; }\n}"
expression: snapshot
---
initial configure:
size: 1000 × 500, bounds: 1280 × 720, states: []

post-map configures:
size: 1000 × 500, bounds: 1280 × 720, states: []
size: 1000 × 500, bounds: 1280 × 720, states: [Activated]
